--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,6 +1,6 @@
 specVersion: '3.0'
 metadata:
-  name: ui5-typescript-from-scratch
+  name: ui5typescriptfromscratch
 type: application
 framework:
   name: SAPUI5
@@ -10,3 +10,13 @@ framework:
     - name: sap.ui.core
     - name: sap.ui.unified
     - name: themelib_sap_horizon
+builder:
+  customTasks:
+    - name: ui5-tooling-transpile-task
+      afterTask: replaceVersion
+server:
+  customMiddleware:
+    - name: ui5-tooling-transpile-middleware
+      afterMiddleware: compression
+    - name: ui5-middleware-livereload
+      afterMiddleware: compression
