--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,10 +1,65 @@
 {
-    "_version": "1.52.0",
-    "sap.app": {
-      "id": "ui5-typescript-from-scratch",
-      "type": "application",
-      "applicationVersion": {
-        "version": "1.0.0"
+  "_version": "1.52.0",
+
+  "sap.app": {
+    "id": "ui5typescriptfromscratch",
+    "type": "application",
+    "i18n": "i18n/i18n.properties",
+    "title": "UI5 TypeScript Hello World",
+    "description": "UI5 TypeScript Hello World",
+    "applicationVersion": {
+      "version": "1.0.0"
+    },
+    "ach": "set-ach"
+  },
+
+  "sap.fiori": {
+
+  },
+
+  "sap.ui": {
+    "technology": "UI5",
+    "icons": {
+
+    },
+    "deviceTypes": {
+      "desktop": true,
+      "tablet": true,
+      "phone": true
+    }
+  },
+
+  "sap.ui5": {
+    "rootView": {
+      "viewName": "ui5typescriptfromscratch.view.App",
+      "type": "XML",
+      "async": true,
+      "id": "app"
+    },
+
+    "dependencies": {
+      "minUI5Version": "1.104.0",
+      "libs": {
+        "sap.ui.core": {},
+        "sap.ui.layout": {},
+        "sap.ui.unified": {},
+        "sap.m": {}
       }
+    },
+
+    "handleValidation": true,
+
+    "contentDensities": {
+      "compact": true,
+      "cozy": true
+    },
+
+    "models": {
+
+    },
+
+    "routing": {
+      
     }
   }
+}
