--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "typeRoots": [ 
             "./node_modules/@types",
             "./node_modules/@sapui5"
-        ]
+        ],"outDir": "./dist"
         
     },
     "include": ["./webapp/**/*"]
